--- a/registration form/register.html
+++ b/registration form/register.html
@@ -15,6 +15,73 @@
             </div>
     </header>
     <head>
+        <style>
+.register
+{
+    position: absolute;
+    height:auto;
+    left:0px;
+    width: 250px;
+}
+nav{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-top: 0px;
+    padding-left: 0px;
+    padding-right: 0px;
+}
+nav ul li{
+    list-style-type: none;
+    display: inline-block;
+    padding: 10px 20px;
+}
+body
+{   display: flex;
+    height:auto;
+    background-image: url(student.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    align-items:center;
+    justify-content: center;
+}
+.user{
+    width: 100%;
+    max-width: 650px;
+    background: rgba(0, 0, 0, 0.5);
+    padding: 28px;
+    border-radius:  10px;
+    box-shadow: inset -2px 2px 2px white ;
+}
+.user label{
+    width:95%;
+    color: white;
+    font-size: 20px;
+    font-weight: 400;
+    margin: 5px 0;
+}
+@media(max-width:600px){
+    .container{
+        min-width: 0px;
+    }
+    .user{
+        margin-bottom: 12px;
+        width:100%;
+    
+    }
+    .user:nth-child(2n){
+        justify-content: space-between;
+    }
+    .main-user-info{
+        max-height: 380px;
+        overflow: auto;
+    
+    }
+    .main-user-info::-webkit-scrollbar{
+        width:0
+    }
+    }
+    </style>
         <link rel="stylesheet" type="text/css" href="D:\registration form\style.css"/>
         <meta name="viewport" content="width=device-width , initial-scale=1.0">
     </head>
