--- a/registration_form/register.html
+++ b/registration_form/register.html
@@ -16,25 +16,29 @@ height: fit-content;
         justify-content: space-between;
 }
 
-.container nav ul li{
+.container nav ul, li{
         list-style-type: none;
         display: inline-block;
-        padding: 5px 5px;
+        padding: 20px 20px;
+        row-gap: 20px;
 }
-.container img.logo{
-    padding: 10px;
+.container nav img.logo{
+    padding: 0px;
     margin: 10 28px;
     display:flex;
     margin: auto;
     position:relative;
 }
-nav ul{
+.container nav, ul{
     float:right;
     margin-right: 20px;
+    color: white;
 }
 nav ul li{
     display:inline-block;
-    margin: 0 25px;
+    font-size: 15px;
+    row-gap: 20px;
+    width: 10%;
 }
 body{
     display:flex;
@@ -112,11 +116,32 @@ body{
     outline:none;
     border:1px solid grey;
 }
+.user-country{
+    justify-content:end ;
+    display: flex;
+    flex-wrap: wrap;
+    width: 50%;
+    padding-bottom: 15px;
+}
+.user-country label{
+    width: 95%;
+    color: white;
+    font-size: 15px;
+    font-weight: 400;
+    margin: 2px 20px;
+}
+.user-country select, option{
+    height: 0%;
+    width: 75%;
+    border-radius: 5px;
+    outline:none;
+    border: 6px solid white;
+}
 .user-gender{
     justify-content:space-between ;
     display: flex;
     flex-wrap: wrap;
-    width: 50%;
+    width: 45%;
     padding-bottom: 15px;
 }
 
@@ -202,15 +227,15 @@ button.user-submit-button{
     <body>  
         <div class="container">
             <nav>
-                <img src="register.jpg" class="logo" width="100" height="100">
+                <img src="register.jpg" class="logo" width="150" height="150">
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">contact</a></li>
+                    <li><a style="color: white;" href="#"><b>Home</b></a></li>
+                    <li><a style="color: white;" href="#"><b>About</b></a></li>
+                    <li><a style="color: white;" href="#"><b>Services</b></a></li>
+                    <li><a style="color: white;" href="#"><b>contact</b></a></li>
                 </ul>
             </nav>
-            <h1 class="form-title">Registration</h1>
+            <h1 class="form-title">Registration</h1><br>
             <form action="#">
                 <div class="main-user-info">
                     <div class="user-input-box">
@@ -224,9 +249,11 @@ button.user-submit-button{
                     <div class="user-address">
                         <label for="contact"><b>Contact Number</b></label>
                         <input type="number" name="contact number" id="contact"><br><br>
-                        <label for="address">Address</label>
+                        <label for="address"><b>Address</b></label>
                         <input type="text" name="address" id="address"><br><br>
-                        <label for="country">Country</label>
+                    </div>
+                    <div class="user-country">
+                        <label for="country"><b>Country</b></label><br><br>
                         <select>
                         <option value=""></option>
                         <option value="AF">Afganisthan</option>
