--- a/registration_form/register.html
+++ b/registration_form/register.html
@@ -16,29 +16,29 @@ height: fit-content;
         justify-content: space-between;
 }
 
-.container nav ul, li{
+.container nav ul li{
         list-style-type: none;
         display: inline-block;
-        padding: 20px 20px;
-        row-gap: 20px;
+        padding: 0px 0px;
 }
-.container nav img.logo{
-    padding: 0px;
+ul li.right {
+    float: right;
+}
+.container img.logo{
     margin: 10 28px;
     display:flex;
     margin: auto;
     position:relative;
 }
-.container nav, ul{
+nav ul{
     float:right;
     margin-right: 20px;
-    color: white;
+    padding: 10px;
 }
 nav ul li{
     display:inline-block;
-    font-size: 15px;
-    row-gap: 20px;
-    width: 10%;
+    margin: 0 2px;
+    
 }
 body{
     display:flex;
@@ -46,8 +46,16 @@ body{
     height: 100vh;
     justify-content: center;
     align-items: center;
-    background: url(student.jpg);
+    background: url(new.jpg);
     background-size: cover;
+}
+.container nav ul li a{
+    color: white;
+  text-align: center;
+  font-size:15px;
+  text-decoration: none;
+  margin-top: auto;
+  font-weight: 500;
 }
 .container{
     width: 100%;
@@ -116,32 +124,11 @@ body{
     outline:none;
     border:1px solid grey;
 }
-.user-country{
-    justify-content:end ;
-    display: flex;
-    flex-wrap: wrap;
-    width: 50%;
-    padding-bottom: 15px;
-}
-.user-country label{
-    width: 95%;
-    color: white;
-    font-size: 15px;
-    font-weight: 400;
-    margin: 2px 20px;
-}
-.user-country select, option{
-    height: 0%;
-    width: 75%;
-    border-radius: 5px;
-    outline:none;
-    border: 6px solid white;
-}
 .user-gender{
     justify-content:space-between ;
     display: flex;
     flex-wrap: wrap;
-    width: 45%;
+    width: 50%;
     padding-bottom: 15px;
 }
 
@@ -202,10 +189,12 @@ button.user-submit-button{
         width: 100%;
         justify-content: space-between;
     }
-    button.user-submit-button{
+    input.user-submit-button{
         justify-content: center;
         justify-content: space-between;
     }
+    .container ul li.right, 
+    .container ul li {float: none;}
     label.gender-category{
         display: flex;
         justify-content: space-between;
@@ -222,20 +211,21 @@ button.user-submit-button{
 }
         </style>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="stylesheet" href="C:\Users\sowmy\OneDrive\Documents\test_html\style.css">
     </head>
     <body>  
         <div class="container">
             <nav>
-                <img src="register.jpg" class="logo" width="150" height="150">
+                <img src="online_education.png" class="logo" width="130" height="130">
                 <ul>
-                    <li><a style="color: white;" href="#"><b>Home</b></a></li>
-                    <li><a style="color: white;" href="#"><b>About</b></a></li>
-                    <li><a style="color: white;" href="#"><b>Services</b></a></li>
-                    <li><a style="color: white;" href="#"><b>contact</b></a></li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">contact</a></li>
                 </ul>
             </nav>
-            <h1 class="form-title">Registration</h1><br>
+            <h1 class="form-title">Registration</h1>
             <form action="#">
                 <div class="main-user-info">
                     <div class="user-input-box">
@@ -249,11 +239,9 @@ button.user-submit-button{
                     <div class="user-address">
                         <label for="contact"><b>Contact Number</b></label>
                         <input type="number" name="contact number" id="contact"><br><br>
-                        <label for="address"><b>Address</b></label>
+                        <label for="address">Address</label>
                         <input type="text" name="address" id="address"><br><br>
-                    </div>
-                    <div class="user-country">
-                        <label for="country"><b>Country</b></label><br><br>
+                        <label for="country">Country</label>
                         <select>
                         <option value=""></option>
                         <option value="AF">Afganisthan</option>
@@ -273,7 +261,20 @@ button.user-submit-button{
                     </div>
                 </div>
                 <div class="user-submit-button">
-                    <button type="submit">Register</button>
+                    <button type="button" onclick="myfunction()">Login</button>
+                    <script>
+                        function myfunction()
+                        {
+                            window.location="login.html";
+                        }
+                    </script>
+                    <button type="button" onclick="myfunction1()">Register</button>
+                    <script>
+                        function myfunction1()
+                        {
+                            window.location="homepage.html";
+                        }
+                    </script>
                 </div>
             </form> 
         </div>
