--- a/university/contact.html
+++ b/university/contact.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
     </head>
     <body>
-        <section class="header">
+        <section class="sub-header">
         <div class="nav_bar">
             <nav>
                 <a href="index.html"><img src="logo.png" class="logo"></a>
@@ -47,54 +47,43 @@
                 </ul>
                 </div>
             </nav>
+            <h4>Contact Us</h4>
         </div>
-        <div class="container">
-            <h1 >World's Biggest University</h1>
-             <p>university, institution of higher education, usually comprising a college of, 
-                liberal arts and sciences and graduate and professional schools and having the authority to confer degrees in various fields of study. </p>
-                <a href="#">Visit us to know more</a>
-        </div> 
         </section>
-        <section class="course">
-            <h1>Courses We Offer</h1>
-            <p>Stay Ahead in this Fast-paced World with the Most Prestigious Certifications.</p>
-            <div class="row">
-                <div class="course-col">
-                    <h3>Intermediate</h3>
-                    <p>The Intermediate Courses are taught at the Government or Private or Cooperative Junior Colleges for two years. These Courses are followed by the prestigious State level Entrance. </p>
+        <section class="contact">
+            <div class="column">
+                <div class="contact-col">
+                    <i class="fa fa-home">     Address</i>
+                    <span>
+                        <h5>xyz building</h5>
+                        <p>Banglore,Karnataka</p>
+                    </span>
                 </div>
-            <div class="course-col">
-                <h3>Degree</h3>
-                <p>A degree course helps you deepen your knowledge in the chosen field Degree courses give the potential for greater job security as more opportunities become more available to you</p>
-            </div>
-            <div class="course-col">
-                <h3>Post-Graduate</h3>
-                <p>Postgraduate study (often just referred to as graduate study in North America) is the process of studying for academic or professional degrees after the completion of a bachelor’s degree. </p>
-            </div>
-            </div>
-        </section> 
-        <section class="campus">
-            <h1>Our Global Campus</h1>
-            <div class="row">
-                <div class="campus-col">
-                    <img src="campus-1.jpeg">
-                    <div class="layer">
-                        <h3>London</h3>
-                    </div>
+                <div class="contact-col">
+                    <i class="fa fa-phone">     Contact Number</i>
+                    <span>
+                        <h5>+1(2735763)</h5>
+                    </span>
                 </div>
-                <div class="campus-col">
-                    <img src="campus-1.jpeg">
-                    <div class="layer">
-                        <h3>US</h3>
-                    </div>
-                </div>
-                <div class="campus-col">
-                    <img src="campus-1.jpeg">
-                    <div class="layer">
-                        <h3>Canada</h3>
-                    </div>
+                <div class="contact-col">
+                    <i class="fa fa-envelope">     Email Id</i>
+                    <span>
+                        <h5>xyz-university@gmail.com</h5>
+                    </span>
                 </div>
             </div>
+        </section>
+        <section class="comment">
+            <div class="column">
+                <div class="comment-box">
+                    <h3>Leave Comment</h3>
+                    <form class="comment-form">
+                        <input type="text" placeholder="Name">
+                        <input type="text" placeholder="Email">
+                        <textarea rows="5" placeholder="comment"></textarea>
+                        <button type="submit" class="explore-button">Post Comment</button>
+                    </form>
+                </div></div>
         </section>
         <section class="footer">
             <h2>About Us</h2>
