--- a/university/index.html
+++ b/university/index.html
@@ -13,32 +13,27 @@
             <nav>
                 <a href="index.html"><img src="logo.png" class="logo"></a>
                 <div class="nav_links">
-                    <a href="#" class="icon">
-                        <span class="bar"></span>
-                        <span class="bar"></span>
-                        <span class="bar"></span>
-                    </a>
                 <ul>
-                    <li><a href="#">HOME</a></li>
+                    <li><a href="#" class="options">HOME</a></li>
                     <li><a href="#" onclick="about()">ABOUT</a></li>
                     <script>
                         function about(){
                             window.location="about.html"
                         }
                     </script>
-                    <li><a href="#" onclick="blog()">BLOG</a></li>
+                    <li><a href="#" class="options" onclick="blog()">BLOG</a></li>
                     <script>
                         function blog(){
                             window.location="blog.html"
                         }
                     </script>
-                    <li><a href="#" onclick="course()">COURSE</a></li>
+                    <li><a href="#"class="options" onclick="course()">COURSE</a></li>
                     <script>
                         function course(){
                             window.location="course.html"
                         }
                     </script>
-                    <li><a href="#" onclick="contact()">CONTACT</a></li>
+                    <li><a href="#" class="options" onclick="contact()">CONTACT</a></li>
                     <script>
                         function contact(){
                             window.location="contact.html"
@@ -52,7 +47,7 @@
             <h1 >World's Biggest University</h1>
              <p>university, institution of higher education, usually comprising a college of, 
                 liberal arts and sciences and graduate and professional schools and having the authority to confer degrees in various fields of study. </p>
-                <a href="#">Visit us to know more</a>
+                <button class="btn">Visit us to know more</button>>
         </div> 
         </section>
         <section class="course">
