--- a/university/contact.html
+++ b/university/contact.html
@@ -74,7 +74,6 @@
             </div>
         </section>
         <section class="comment">
-            <div class="column">
                 <div class="comment-box">
                     <h3>Leave Comment</h3>
                     <form class="comment-form">
@@ -83,8 +82,8 @@
                         <textarea rows="5" placeholder="comment"></textarea>
                         <button type="submit" class="explore-button">Post Comment</button>
                     </form>
-                </div></div>
-                <div class="star">
+                </div></section>
+                <section class="star">
                 <div class="star-widget">
                     <input type="radio" name="rate" id="rate-5">
                     <label for="rate-5" class="fa fa-star"></label>
