--- a/university/index.html
+++ b/university/index.html
@@ -15,7 +15,7 @@
                 <div class="nav_links">
                 <ul>
                     <li><a href="#" class="options">HOME</a></li>
-                    <li><a href="#" onclick="about()">ABOUT</a></li>
+                    <li><a href="#" class="onclick="about()">ABOUT</a></li>
                     <script>
                         function about(){
                             window.location="about.html"
@@ -101,5 +101,6 @@
                 <i class="fa fa-whatsapp"></i>
             </div>
         </section>
+        </script>
       </body>
 </html>
