--- a/university/about.html
+++ b/university/about.html
@@ -25,7 +25,7 @@
                             window.location="index.html"
                         }
                     </script>
-                    <li><a href="#" onclick="about()">ABOUT</a></li>
+                    <li><a href="#" class="options"onclick="about()">ABOUT</a></li>
                     <script>
                         function about(){
                             window.location="about.html"
