--- a/university/course.html
+++ b/university/course.html
@@ -19,7 +19,7 @@
                         <span class="bar"></span>
                     </a>
                 <ul>
-                    <li><a href="#">HOME</a></li>
+                    <li><a href="#" onclick="home()">HOME</a></li>
                     <script>
                         function home(){
                             window.location="index.html"
@@ -37,7 +37,7 @@
                             window.location="blog.html"
                         }
                     </script>
-                    <li><a href="#" onclick="course()">COURSE</a></li>
+                    <li><a href="#" class="options" onclick="course()">COURSE</a></li>
                     <script>
                         function course(){
                             window.location="course.html"
