--- a/university/blog.html
+++ b/university/blog.html
@@ -94,7 +94,7 @@
                         <button type="submit" class="explore-button">Post Comment</button>
                     </form>
                 </div></div>
-        </section>
+        </section><br><br><br><br>
         <section class="footer">
             <h2>About Us</h2>
             <p>A university is an institution of higher education and research which <br>awards academic degrees in several academic disciplines.</p>
