--- a/university/contact.html
+++ b/university/contact.html
@@ -89,7 +89,7 @@
                 </div></div>
         </section>
         
-        <section class="footer">
+        <section class="footer-contact">
             <div class="icons">
             <h2>About Us</h2>
             <p>A university is an institution of higher education and research which <br>awards academic degrees in several academic disciplines.</p>
